k8s/greeter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter-service
spec:
  selector:
    app: hello-kube
  ports:
  - port: 8080
    targetPort: 8080
    protocol: "TCP"
    name: http
