k8s/greeter-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-new-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - secretName: letsencrypt-dev-private-key
  rules:
  - http:
      paths:
      - path: /greeter(/|$)(.*)
        backend:
          serviceName: greeter-service
          servicePort: 8080
